# ChangeLog for www-apps/cgit
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/cgit/ChangeLog,v 1.7 2011/06/27 08:58:08 pva Exp $

*cgit-0.9.0.1 (27 Jun 2011)

  27 Jun 2011; Peter Volkov <pva@gentoo.org> +cgit-0.9.0.1.ebuild,
  cgit-9999.ebuild, files/postinstall-en.txt:
  Version bump, bump EAPI, add instructions for apache2 installation bug 370681
  wrt to Oliver Schinagl. Thank Nikoli for all this job.

  27 Jun 2011; Peter Volkov <pva@gentoo.org> -cgit-0.8.3.1-r1.ebuild:
  Drop old and vulnerable version.

*cgit-9999 (29 Apr 2011)
*cgit-0.9 (29 Apr 2011)
*cgit-0.8.3.5 (29 Apr 2011)

  29 Apr 2011; Peter Volkov <pva@gentoo.org> +cgit-0.8.3.5.ebuild,
  +cgit-0.9.ebuild, +cgit-9999.ebuild, files/cgitrc, metadata.xml:
  Version bump, bug #325411. Fixes security bug #357819, thank Paweł Hajdan,
  Jr. for report. Fixes cgi support bug 310961 wrt parafin. Thank Nikoli for
  this job.

  16 Jun 2010; Lance Albertson <ramereth@gentoo.org> -cgit-0.8.3.1.ebuild,
  cgit-0.8.3.1-r1.ebuild:
  Require newer app-text/asciidoc if doc is enabled (resolves #321117), ebuild
  cleanup

  17 Mar 2010; Sebastian Pipping <sping@gentoo.org> cgit-0.8.3.1.ebuild,
  cgit-0.8.3.1-r1.ebuild:
  Propagate move of dev-util/git to dev-vcs/git

*cgit-0.8.3.1-r1 (09 Mar 2010)

  09 Mar 2010; Lance Albertson <ramereth@gentoo.org>
  +cgit-0.8.3.1-r1.ebuild:
  Add doc useflag to make install the manpage optional

*cgit-0.8.3.1 (20 Feb 2010)

  20 Feb 2010; Lance Albertson <ramereth@gentoo.org> +cgit-0.8.3.1.ebuild,
  +files/cgitrc, +files/postinstall-en.txt, +metadata.xml:
  Initial ebuild

  Thanks to everyone who helped in #223339 for contributing to the ebuild.
