@@ -2,12 +2,14 @@ AUX cgitrc 2514 RMD160 614cb050acc97caaa1da7caa6a60e74b457bba37 SHA1 376d65e71ab
 AUX postinstall-en.txt 1844 RMD160 8b6048db73f2b806335ac76a672784a46ba19394 SHA1 f74f0ee924bf91bb9699e83fd947cdd26b0e4f5f SHA256 2bfadbe531386c9f2b9fd6b346c9542dd367f86f1ffc1be1a43d9aa182a0118b
 DIST cgit-0.8.3.5.tar.bz2 54844 RMD160 f47efaa9de8e6d6af85cdf29bfa95a7c17b2d4e5 SHA1 4e3d8a28688efe4372a7945db8ec96b383e8e88b SHA256 2ca856a3ceae1c58e1c066bd06f4112c604a9395ae46f69db524ada1b71d8298
 DIST cgit-0.9.0.1.tar.bz2 63992 RMD160 31636b09ae3d659fbafc614e6c351217410e678c SHA1 214791b92502d90ac2f57044529cecd51865874b SHA256 6fb1f8c6f67c176b1b300520ad8c5fb036d272e6051c85b5bb6a02f1772204f0
+DIST cgit-0.9.0.2.tar.bz2 64203 RMD160 3eae71b4232308ca62767529c25e9710dd46c80b SHA1 0ae0dcb07001c0e231355f5bb9634e8ebcd6e889 SHA256 97e0f78f5d4aabe59e3795849c6e1a72900cd558a94d88cb236fee12d72b528c
 DIST cgit-0.9.tar.bz2 63580 RMD160 01e2bf7a5f4f385a0a6cda18292f3f9a55337622 SHA1 acdea79a880521fcfd0d359b41fdd59abf76170d SHA256 530eaf702b8ca0a44750f5ed1f27b1d74b317441cce9d2d4bb340c7dbea8a48f
 DIST git-1.7.3.tar.bz2 2629734 RMD160 4b0f95b4d114f5b7a4eb61c0f73b2f9a533637a0 SHA1 32e231fd10b85265487f0c2cc50d6d889b71de78 SHA256 0035a4a7906f65812072457b65c609f24c66f31593d0ad372b7c18894a26b07d
 DIST git-1.7.4.tar.bz2 2703735 RMD160 a064d7a5b2d3fae6171ca91a03082eb46d7bb9b7 SHA1 57b783627d9a9515ce3ef8f79128074de6197b2e SHA256 8e260b9e5dfb46a35f26e3db450c2dabb4d1df254bfb2820779945a1ecbcef51
 EBUILD cgit-0.8.3.5.ebuild 1851 RMD160 08c348a38f50a15cd480556d8cfce4ce11ab45bc SHA1 7bb2865b2c92f6e0cb4543e6477c6245c950f3a0 SHA256 9d264701a4f2d94e44d45497ded6d9d49d12703d1c029fd332f929c9fb8d11ee
 EBUILD cgit-0.9.0.1.ebuild 1824 RMD160 218c6b4d6012f93ff093f6a6f9596ac5d838f269 SHA1 83d84d8615b2a206f39339f2b798e2ee9f59988d SHA256 0a279baf32631c3fc27b69aa7afdad08642654195cc8b95253aa054c4a130cbc
+EBUILD cgit-0.9.0.2.ebuild 1824 RMD160 83179c782c13cde7c8a16b07c6788bcba45e19ad SHA1 d156a45094c5783ddfc1921e8905ed1a7de0ba1c SHA256 e8b139997351816e82243214e29eda6307507874916ca4da91e0abaa6ebdf123
 EBUILD cgit-0.9.ebuild 1830 RMD160 478a79bc043b4e766a3cf94538ad4dc065c09c97 SHA1 0aa15bda1672aaa95651caeebe11827ef87317de SHA256 844245a0a5d0c7a97cea53c095723aa01da90e59ab85b23c3f43184c5faed634
 EBUILD cgit-9999.ebuild 1813 RMD160 9af43899e314b9a29630c5ba4f848e2df3845556 SHA1 9f75a99aef7a31b199fb2afc623957c62f3f4196 SHA256 0e73d31c6aac225636c853bea88ba3a3ec011ae29b97bd9ccedcc9ffba300289
-MISC ChangeLog 1726 RMD160 9f5f16b4dd8fe6e4fbd3b92b150f5c7c747e03c3 SHA1 e5686bf9145a7e877d179020727499fb0540c608 SHA256 03e25b8f7253fdc1908144474dfbfc5a919be0f040d3ebbc557afdce205684cc
+MISC ChangeLog 1903 RMD160 dfe2366e55a583135c27b5ca7daa9cd79cbc93fd SHA1 43fe617b4d20f732a13caffd3446124365f94fbc SHA256 59c041c8635d0a75cfb45ae091a685454317953a05b77e4bd9f479de77a275b8
 MISC metadata.xml 708 RMD160 9d4dec58ea4db0d424fa1fcdc98879bfac455205 SHA1 2bec92f38a0ff9ef4288093974a04c0dd3a02ee4 SHA256 d19c132bfeebaa0b6eddfc589f49eed3f03fe326e10ebbde8571f4cb97bfadfa
