@@ -1,6 +1,11 @@
 # ChangeLog for www-apps/cgit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/cgit/ChangeLog,v 1.7 2011/06/27 08:58:08 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/cgit/ChangeLog,v 1.8 2011/08/03 18:17:38 pva Exp $
+
+*cgit-0.9.0.2 (03 Aug 2011)
+
+  03 Aug 2011; Peter Volkov <pva@gentoo.org> +cgit-0.9.0.2.ebuild:
+  Version bump, bug #376457 thank ScytheMan for report and Nikoli for this job.
 
 *cgit-0.9.0.1 (27 Jun 2011)
 
